--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrap4-dylut",
+  "name": "nolan-todo",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -23,6 +23,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^4.6.0",
     "jquery": "^3.6.0",
+    "ngx-spinner": "^11.0.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
