--- a/angular.json
+++ b/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "bootstrap4Dylut": {
+    "todo": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/bootstrap4Dylut",
+            "outputPath": "dist/todo",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -71,18 +71,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "bootstrap4Dylut:build"
+            "browserTarget": "todo:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "bootstrap4Dylut:build:production"
+              "browserTarget": "todo:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "bootstrap4Dylut:build"
+            "browserTarget": "todo:build"
           }
         },
         "test": {
@@ -112,16 +112,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "bootstrap4Dylut:serve"
+            "devServerTarget": "todo:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "bootstrap4Dylut:serve:production"
+              "devServerTarget": "todo:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "bootstrap4Dylut"
+  "defaultProject": "todo"
 }
